--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -2,6 +2,14 @@
 
 {% block title %}Hello HomeController!{% endblock %}
 
+{% block stylesheets %}
+    {{ parent() }}
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+     {{ encore_entry_script_tags('checkout') }}
+{% endblock %}
+
 {% block body %}
 
 <div class="example-wrapper">
