--- a/templates/__part/header.html.twig
+++ b/templates/__part/header.html.twig
@@ -10,9 +10,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="{{ path('app_home')}}">Index</a>
-                    <a class="nav-link" href="/blog">Blog</a>
+                    <a class="nav-link" href="#">Blog</a>
                     <a class="nav-link" href="{{path('app_games')}}">Jeux</a>
-                    <a class="nav-link" href="/about">About</a>
+                    <a class="nav-link" href="#">About</a>
                 </div>
             </div>
         </div>
