--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Accueil{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('app') }}
+    {{ encore_entry_script_tags('Home') }}
 {% endblock %}
 
 {% block body %}
