--- a/templates/__part/header.html.twig
+++ b/templates/__part/header.html.twig
@@ -1,20 +1,17 @@
 <header>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
+    <nav class="nav pt-2 pb-2 justify-content-around">
+        <div>
             <a class="navbar-brand" href="/">
-            <Image src="{{ asset('/img/logo_awsd.svg') }}" alt="Vercel Logo" class="img-fluid rounded img_size img_background"/>
+                <Image src="{{ asset('/img/logo_awsd.svg') }}" alt="Vercel Logo"
+                    class="img-fluid rounded img_size img_background" />
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="{{ path('app_home')}}">Index</a>
-                    <a class="nav-link" href="#">Blog</a>
-                    <a class="nav-link" href="{{path('app_games')}}">Jeux</a>
-                    <a class="nav-link" href="#">About</a>
-                </div>
-            </div>
         </div>
+        <div class="d-flex justify-content-between">
+            <a class="nav-link" href="{{ path('app_home')}}">Accueil</a>
+            <a class="nav-link" href="#">Blog</a>
+            <a class="nav-link" href="{{path('app_games')}}">Jeux</a>
+            <a class="nav-link" href="#">About</a>
+        </div>
+        {% include "/__part/__connexion_form.html.twig" %}
     </nav>
 </header>
