--- a/templates/__part/header.html.twig
+++ b/templates/__part/header.html.twig
@@ -10,6 +10,7 @@
             <a class="nav-link" href="{{ path('app_home')}}">Accueil</a>
             <a class="nav-link" href="#">Blog</a>
             <a class="nav-link" href="{{path('app_games')}}">Jeux</a>
+            {# <a class="nav-link" href="{{path('app_rosette_twitch')}}">Rosette Twitch</a> #}
             <a class="nav-link" href="#">About</a>
         </div>
         {% include "/__part/__connexion_form.html.twig" %}
