signin react + controller + js routing

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MTGController!{% endblock %}
+{% block title %}Profil{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
-    {{ encore_entry_script_tags('MTG') }}
+    {{ encore_entry_script_tags('Profil') }}
 {% endblock %}
 
 {% block body %}
