--- a/templates/__part/header.html.twig
+++ b/templates/__part/header.html.twig
@@ -1,5 +1,5 @@
 <header>
-    <nav class="nav pt-2 pb-2 justify-content-around">
+    <nav class="nav nav-custom pt-2 pb-2 justify-content-around">
         <div>
             <a class="navbar-brand" href="/">
                 <Image src="{{ asset('/img/logo_awsd.svg') }}" alt="Vercel Logo"
