--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}awsd.fr{% endblock %}</title>
+    <meta name="description" content="Un site internet de test et de mistère." />
+    <meta name="revised" content="01/08/2022" />
+    <meta name="viewport" content="width=device-width">
+    <meta name="keywords" content="sicot-development, jeux, magic the gatering"/>
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
