--- a/templates/__part/header.html.twig
+++ b/templates/__part/header.html.twig
@@ -8,8 +8,9 @@
         </div>
         <div class="d-flex justify-content-between">
             <a class="nav-link" href="{{ path('app_home')}}">Accueil</a>
-            <a class="nav-link" href="#">Blog</a>
             <a class="nav-link" href="{{path('app_games')}}">Jeux</a>
+            <a class="nav-link" href="{{path('app_mtg')}}">Magic the gathering</a>
+            <a class="nav-link" href="#">New World Armurerie</a>
             {# <a class="nav-link" href="{{path('app_rosette_twitch')}}">Rosette Twitch</a> #}
             <a class="nav-link" href="#">About</a>
         </div>
