--- a/templates/mtg/index.html.twig
+++ b/templates/mtg/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello MTGController!{% endblock %}
+{% block title %}Magic !!!{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
