--- a/templates/games/index.html.twig
+++ b/templates/games/index.html.twig
@@ -4,7 +4,12 @@
 
 {% block body %}
 
-{% for game in games %}
+
+
+<div class="row row-cols-1 row-cols-md-2 g-4">
+
+    {% for game in games %}
     {% include "games/__part/card_game.html.twig" %}
-{% endfor %}
+    {% endfor %}
+</div>
 {% endblock %}
