--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,7 @@
     <meta name="description" content="Un site internet de test et de mistère." />
     <meta name="revised" content="01/08/2022" />
     <meta name="viewport" content="width=device-width">
-    <meta name="keywords" content="sicot-development, jeux, magic the gatering"/>
+    <meta name="keywords" content="sicot-development, jeux, magic the gatering" />
     <link rel="icon"
         href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
     {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
@@ -17,18 +17,14 @@
 
     {% block javascripts %}
     {{ encore_entry_script_tags('app') }}
-    {{ encore_entry_script_tags('AppReact') }}
     {% endblock %}
 
 </head>
 
 <body>
 
-    {% include "__part/header.html.twig" %}
-    <main class="container">
-        {% block body %}{% endblock %}
-    </main>
-    {% include "__part/footer.html.twig" %}
+    {# {% include "__part/header.html.twig" %} #}
+    {% block body %}{% endblock %}
 </body>
 
 </html>
