--- a/templates/games/index.html.twig
+++ b/templates/games/index.html.twig
@@ -1,15 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Jeux{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    {{ encore_entry_script_tags('Games') }}
+{% endblock %}
 
 {% block body %}
 
-
-
-<div class="row row-cols-1 row-cols-md-2 g-4">
-
-    {% for game in games %}
-    {% include "games/__part/card_game.html.twig" %}
-    {% endfor %}
-</div>
+    <script>
+        window.awsd_data = {{games|raw}};
+    </script>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 {% endblock %}
